--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_script:
 # 无其他依赖项所以执行npm run build 构建就行了
 script:
   - npm run test:unit
+  - npm run build
 
 # after_script:
 #   - cd ./dist
@@ -35,3 +36,12 @@ branches:
     - master
 env:
  global:
+
+deploy:
+  local_dir: dist
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep_history: true
+  on:
+    branch: master
